--- a/PE-HAQUAPP/app/src/main/AndroidManifest.xml
+++ b/PE-HAQUAPP/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.PEHAQUAPP"
         tools:targetApi="31">
         <activity
+            android:name=".controller.CreateWorkActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.CreateWorkActivity"
+            android:exported="false" />
+        <activity
             android:name=".controller.ShowWorkActivity"
             android:exported="false" />
         <activity
